Little changes in home page

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="IIIT logo dark.png" alt="Logo" class="logo" />
+      <img src="IIIT_logo_dark.png" alt="Logo" class="logo" />
       <nav class="navigation">
         <ul>
           <li class="nav-list">
@@ -26,13 +26,13 @@
     <footer>
       <div class="footer">
         <ul>
-          <li class="footer-list-1">
+          <li>
             <a href="#" class="footer-link">ABOUT</a>
           </li>
-          <li class="footer-list-2">
+          <li>
             <a href="#" class="footer-link">FAQ</a>
           </li>
-          <li class="footer-list-3">
+          <li>
             <a href="#" class="footer-link">FEEDBACK</a>
           </li>
         </ul>
