--- a/home.html
+++ b/home.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Olly</title>
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="./home.css" />
   </head>
   <body>
     <header>
-      <img src="IIIT_logo_dark.png" alt="Logo" class="logo" />
+      <img src="./IIIT_logo_dark.png" alt="Logo" class="logo" />
       <nav class="navigation">
         <ul>
           <li class="nav-list">
-            <a href="#" class="nav-link">STUDENT LOGIN </a>
+            <a href="./student_login.html" class="nav-link">STUDENT LOGIN </a>
           </li>
           <li class="nav-list">
-            <a href="#" class="nav-link">FACULTY LOGIN </a>
+            <a href="./faculty_login.html" class="nav-link">FACULTY LOGIN </a>
           </li>
           <li class="nav-list">
             <a href="#" class="nav-link">CONTACT US </a>
