kuch khas change nahi kiya hai

--- a/About Page/About Page.html
+++ b/About Page/About Page.html
@@ -133,8 +133,8 @@
       </ul>
     </nav>
   </header>
-  <img class="vishnu-img" src="assets/profile_pic.png" id="Vishnu_img">
-  <a class="vishnu nav-link" id="Vishnu_info" href="https://www.vishnuworld.wordpress.com">Vishnu<br>
+  <img class="vishnu-img" src="assets/profile_pic.png" id="Vishnu_img">  
+  <a class="vishnu nav-link" id="Vishnu_info" href="https://vishnuworld.wordpress.com">Vishnu<br>
      2019BCS-072
   </a>
   <img class="vishnu-img" id="Aniket_img">
