Changed css location

--- a/faculty_login.html
+++ b/faculty_login.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Faculty Login</title>
-    <link rel="stylesheet" href="./faculty_login.css" />
+    <link rel="stylesheet" href="./css/faculty_login.css" />
   </head>
 
   <body>
     <form class="form" onsubmit="return false" autocomplete="off">
       <div class="form-inner">
-        <h2 style="color: var(--color-primary)">Faculty Login</h2>
+        <h2 style="color: var(--color-primary);">Faculty Login</h2>
         <div class="input-wrapper">
           <label for="login-username">Username</label>
           <div class="input-group">
