--- a/student_login.html
+++ b/student_login.html
@@ -7,13 +7,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
     />
-    <link rel="stylesheet" href="./student_login.css" />
+    <link rel="stylesheet" href="./css/student_login.css" />
   </head>
   <body>
     <!-- partial:index.partial.html -->
     <form class="form" onsubmit="return false" autocomplete="off">
       <div class="form-inner">
-        <h2 style="color: var(--color-primary)">Student Login</h2>
+        <h2 style="color: var(--color-primary);">Student Login</h2>
         <div class="input-wrapper">
           <label for="login-username">Username</label>
           <div class="input-group">
