--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             <a href="./faculty_login.html" class="nav-link">FACULTY LOGIN </a>
           </li>
           <li class="nav-list">
-            <a href="#" class="nav-link">CONTACT US </a>
+            <a href="./contact_us.html" class="nav-link">CONTACT US </a>
           </li>
         </ul>
       </nav>
@@ -27,13 +27,13 @@
       <div class="footer">
         <ul>
           <li>
-            <a href="#" class="footer-link">ABOUT</a>
+            <a href="about.html" class="footer-link">ABOUT</a>
           </li>
           <li>
-            <a href="#" class="footer-link">FAQ</a>
+            <a href="faq.html" class="footer-link">FAQ</a>
           </li>
           <li>
-            <a href="#" class="footer-link">FEEDBACK</a>
+            <a href="feedback.html" class="footer-link">FEEDBACK</a>
           </li>
         </ul>
       </div>
