--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!doctype html>
+<link rel="stylesheet" href="./css/404.css">
 <html lang="en">
-    <link rel="stylesheet" href="public/css/404.css">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,6 +14,6 @@
             <h1>Sorry! Page not found.</h1>
             <h3>Unfortunately, the page you are looking for does not exist.</h3>
         </div>
-        <button>LET'S GO BACK HOME</button>
+        <button onclick="window.location.href = '/';">LET'S GO BACK HOME</button>
     </body>
 </html>
