Connected Student login and Student Portal

--- a/student.html
+++ b/student.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Student Login</title>
-    <link rel="stylesheet" href="./css/student.css" />
+    <link rel="stylesheet" href="/css/student.css" />
   </head>
 
   <body>
@@ -28,7 +28,7 @@
             <input
               type="text"
               id="login-username"
-              name="username"
+              name="roll_no"
               data-lpignore="true"
             />
           </div>
