--- a/faculty.html
+++ b/faculty.html
@@ -25,7 +25,12 @@
                 ></path>
               </svg>
             </span>
-            <input type="text" id="login-username" data-lpignore="true" />
+            <input
+              type="text"
+              id="login-username"
+              name="faculty_id"
+              data-lpignore="true"
+            />
           </div>
         </div>
         <div class="input-wrapper">
@@ -38,7 +43,12 @@
                 ></path>
               </svg>
             </span>
-            <input type="password" id="login-password" data-lpignore="true" />
+            <input
+              type="password"
+              id="login-password"
+              name="password"
+              data-lpignore="true"
+            />
           </div>
         </div>
         <div class="btn-group">
