--- a/home.html
+++ b/home.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Home</title>
-        <link rel="stylesheet" href="./public/css/home.css"/>
+        <link rel="stylesheet" href="./css/home.css"/>
     </head>
     <body>
         <div class="wrapper">
             <h1>ABV - Indian Institute of Information Technology, Gwalior</h1>
             <div class="cols">
-                <div class="col">
+                <div class="col" onClick="window.open( '/student_portal','_top' ); return false;">
                     <div class="container">
                         <div class="front" style="background-image: url(https://images.unsplash.com/photo-1476842634003-7dcca8f832de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=500&h=500&fit=crop&ixid=eyJhcHBfaWQiOjF9)">
                             <div class="inner">
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                 
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="col"  onClick="window.open( '/faculty_portal','_top' ); return false;">
                     <div class="container">
                         <div class="front" style="background-image: url(https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=500&h=500&fit=crop&ixid=eyJhcHBfaWQiOjF9)">
                             <div class="inner">
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="col"  onClick="window.open( '/contact_us','_top' ); return false;">
                     <div class="container">
                         <div class="front" style="background-image: url(https://images.unsplash.com/photo-1530811761207-8d9d22f0a141?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=500&h=500&fit=crop&ixid=eyJhcHBfaWQiOjF9)">
                             <div class="inner">
@@ -38,7 +38,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="col" onClick="window.open( '/project','_top' ); return false;">
                     <div class="container">
                         <div class="front" style="background-image: url(https://images.unsplash.com/photo-1533474616770-c995695e4921?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=500&h=500&fit=crop&ixid=eyJhcHBfaWQiOjF9)">
                             <div class="inner">
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="col" onClick="window.open( '/faq','_top' ); return false;">
                     <div class="container">
                         <div class="front" style="background-image: url(https://images.unsplash.com/photo-1501522774256-bd04816aaf24?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=500&h=500&fit=crop&ixid=eyJhcHBfaWQiOjF9)">
                             <div class="inner">
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="col" onClick="window.open( '/feedback','_top' ); return false;">
                     <div class="container">
                         <div class="front" style="background-image: url(https://images.unsplash.com/photo-1569513589209-18a39b58bcbd?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=500&h=500&fit=crop&ixid=eyJhcHBfaWQiOjF9)">
                             <div class="inner">
