Removed all errors in admin portal and in student portal (sorry for the latter)

--- a/admin.html
+++ b/admin.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Student Login</title>
-    <link rel="stylesheet" href="./css/student.css" />
+    <link rel="stylesheet" href="/css/student.css" />
   </head>
 
   <body>
     <form class="form" action="./admin_login" method="POST" autocomplete="off">
       <div class="form-inner">
-        <h2 style="color: var(--color-primary);">Student Login</h2>
+        <h2 style="color: var(--color-primary);">Admin Login</h2>
         <div class="input-wrapper">
           <label for="login-username">Username</label>
           <div class="input-group">
