--- a/faculty.html
+++ b/faculty.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Faculty Login</title>
-    <link rel="stylesheet" href="./css/faculty.css" />
+    <link rel="stylesheet" href="/css/faculty.css" />
   </head>
 
   <body>
