--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Student Login</title>
+    <title>Admin Login</title>
     <link rel="stylesheet" href="/css/student.css" />
   </head>
 
