Removed typos which were typos

--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <form class="form" action="./admin_login" method="POST" autocomplete="off">
+    <form class="form" action="./admin_login" method="POST">
       <div class="form-inner">
         <h2 style="color: var(--color-primary);">Admin Login</h2>
         <div class="input-wrapper">
@@ -20,12 +20,7 @@
                 ></path>
               </svg>
             </span>
-            <input
-              type="text"
-              id="login-username"
-              name="id"
-              data-lpignore="true"
-            />
+            <input type="text" id="login-username" name="id" />
           </div>
         </div>
         <div class="input-wrapper">
@@ -38,12 +33,7 @@
                 ></path>
               </svg>
             </span>
-            <input
-              type="password"
-              id="login-password"
-              name="password"
-              data-lpignore="true"
-            />
+            <input type="password" id="login-password" name="password" />
           </div>
         </div>
         <div class="btn-group">
