--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         <div class="wrapper">
             <h1>ABV - Indian Institute of Information Technology, Gwalior</h1>
             <div class="cols">
-                <div class="col" onClick="window.open( '/student_portal','_top' ); return false;">
+                <div class="col" onClick="window.open( 'users/student_portal','_top' ); return false;">
                     <div class="container">
                         <div class="front" style="background-image: url(https://images.unsplash.com/photo-1476842634003-7dcca8f832de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=500&h=500&fit=crop&ixid=eyJhcHBfaWQiOjF9)">
                             <div class="inner">
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                 
-                <div class="col"  onClick="window.open( '/faculty_portal','_top' ); return false;">
+                <div class="col"  onClick="window.open( 'users/faculty_portal','_top' ); return false;">
                     <div class="container">
                         <div class="front" style="background-image: url(https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=500&h=500&fit=crop&ixid=eyJhcHBfaWQiOjF9)">
                             <div class="inner">
