Admin portal improved

--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <form class="form" action="./admin_login" method="POST">
+    <form class="form" action="./login" method="POST">
       <div class="form-inner">
         <h2 style="color: var(--color-primary);">Admin Login</h2>
         <div class="input-wrapper">
