--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" onClick="window.open( '/feedback','_top' ); return false;">
+                <div class="col" onClick="window.open( 'https://docs.google.com/forms/d/e/1FAIpQLSdHrlmFr0qwJr6jXmA6PDgGIkUzcwu4i2J-hgn3Snugm-zuZg/viewform','_blank' ); return false;">
                     <div class="container">
                         <div class="front" style="background-image: url(https://images.unsplash.com/photo-1569513589209-18a39b58bcbd?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=500&h=500&fit=crop&ixid=eyJhcHBfaWQiOjF9)">
                             <div class="inner">
