connected contact-us page to home page

--- a/contact-us.html
+++ b/contact-us.html
@@ -18,6 +18,7 @@
               <h3>Aniket Sharma</h3>
               <h4>2019BCS-008</h4>
               <h4>Backend Developer</h4>
+              <a href="mailto: ">Email</a>
             </div>
           </div>
           
@@ -30,6 +31,7 @@
               <h3>Ashok Arora</h3>
               <h4>2019BCS-075</h4>
               <h4>UI/UX Designer</h4>
+              <a href="mailto: arora8715@gmail.com">Email</a>
             </div>
           </div>
           
@@ -42,6 +44,7 @@
               <h3>Vishnu Agarwal</h3>
               <h4>2019BCS-072</h4>
               <h4>Frontend Developer</h4>
+              <a href="mailto: ">Email</a>
             </div>
           </div>
     </body>
