redesigned login page colors

--- a/faculty.html
+++ b/faculty.html
@@ -37,8 +37,8 @@
           </div>
         </div>
         <div class="btn-group">
-          <button class="btn btn--primary">Sign in</button
-          ><a class="btn--text" href="#0">Forgot password?</a>
+          <button class="btn btn--primary">Sign in</button>
+          <!-- <a class="btn--text" href="#0">Forgot password?</a> -->
         </div>
       </div>
     </form>
