--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Admin Login</title>
-    <link rel="stylesheet" href="/css/student.css" />
+    <link rel="stylesheet" href="/css/admin.css" />
   </head>
 
   <body>
@@ -37,8 +37,8 @@
           </div>
         </div>
         <div class="btn-group">
-          <button class="btn btn--primary">Sign in</button
-          ><a class="btn--text" href="#0">Forgot password?</a>
+          <button class="btn btn--primary">Sign in</button>
+          <!-- <a class="btn--text" href="#0">Forgot password?</a> -->
         </div>
       </div>
     </form>
