--- a/super.html
+++ b/super.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Super Admin Login</title>
-    <link rel="stylesheet" href="/css/student.css" />
+    <link rel="stylesheet" href="/css/super.css" />
   </head>
 
   <body>
