--- a/contact-us.html
+++ b/contact-us.html
@@ -18,7 +18,7 @@
               <h3>Aniket Sharma</h3>
               <h4>2019BCS-008</h4>
               <h4>Backend Developer</h4>
-              <a href="mailto: ">Email</a>
+              <a>Email: </br> aniketsharma00411 AT gmail DOT com</a>
             </div>
           </div>
           
@@ -26,12 +26,12 @@
           <div class="box">
             <div class="details">
               <div class="image">
-                <img src=" ">
+                <img src="../docs/ashok-arora.jpg">
               </div>
               <h3>Ashok Arora</h3>
               <h4>2019BCS-075</h4>
               <h4>UI/UX Designer</h4>
-              <a href="mailto: arora8715@gmail.com">Email</a>
+              <a>Email: </br>arora8715 AT gmail DOT com</a>
             </div>
           </div>
           
@@ -39,12 +39,12 @@
           <div class="box">
             <div class="details">
               <div class="image">
-                <img src=" ">
+                <img src="">
               </div>
               <h3>Vishnu Agarwal</h3>
               <h4>2019BCS-072</h4>
               <h4>Frontend Developer</h4>
-              <a href="mailto: ">Email</a>
+              <a>Email: </br>bcs_2019072 AT iiitm DOT ac DOT in</a>
             </div>
           </div>
     </body>
