--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,9 @@
     }
 
     body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
       background: var(--color2);
       font-size: 20px;
       color: #ebdbb2;
@@ -58,6 +61,7 @@
       flex-direction: column;
       width: 1000px;
       height: 580px;
+      margin-top: 50px;
       padding: 10px;
       border: 2px solid #ebdbb2;
       border-radius: 15px;
