--- a/project_details.html
+++ b/project_details.html
@@ -4,6 +4,7 @@
     :root {
       --color1: #282828;
       --color2: #32302f;
+      --sfTileBorder: #ebdbb2;
     }
 
     body {
@@ -12,6 +13,7 @@
       justify-content: center;
       background: var(--color2);
       font-size: 20px;
+      color: var(--sfTileBorder);
     }
 
     button,
@@ -57,7 +59,7 @@
     #dashboard {
       display: flex;
       flex-direction: column;
-      margin: 50px;
+      margin-top: 50px;
       width: 1000px;
       height: 580px;
       padding: 10px;
