Favicon added and title improved

--- a/contact-us.html
+++ b/contact-us.html
@@ -7,6 +7,7 @@
         <title>Contact Us</title>
         <meta name="description" content="Contact Us">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" href="./assets/IIIT_logo_dark.png" />
     </head>
 
     <body>
