--- a/404.html
+++ b/404.html
@@ -1,19 +1,20 @@
-<!doctype html>
-<link rel="stylesheet" href="./css/404.css">
+<!DOCTYPE html>
+<link rel="stylesheet" href="./css/404.css" />
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>404 page</title>
-        <meta name="description" content="404 page">
-        <link rel="stylesheet" href="css/styles.css">
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>404 page</title>
+    <meta name="description" content="404 page" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="./assets/IIIT_logo_dark.png" />
+  </head>
 
-    <body>
-        <div id="message">
-            <h1>Sorry! Page not found.</h1>
-            <h3>Unfortunately, the page you are looking for does not exist.</h3>
-        </div>
-        <button onclick="window.location.href = '/';">LET'S GO BACK HOME</button>
-    </body>
+  <body>
+    <div id="message">
+      <h1>Sorry! Page not found.</h1>
+      <h3>Unfortunately, the page you are looking for does not exist.</h3>
+    </div>
+    <button onclick="window.location.href = '/';">LET'S GO BACK HOME</button>
+  </body>
 </html>
