--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Admin Login</title>
     <link rel="stylesheet" href="/css/admin.css" />
+    <link rel="icon" href="../assets/IIIT_logo_dark.png" />
   </head>
 
   <body>
