--- a/faculty.html
+++ b/faculty.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Faculty Login</title>
     <link rel="stylesheet" href="/css/faculty.css" />
+    <link rel="icon" href="../assets/IIIT_logo_dark.png" />
   </head>
 
   <body>
