--- a/project_details.html
+++ b/project_details.html
@@ -126,6 +126,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Details</title>
+    <link rel="icon" href="./assets/IIIT_logo_dark.png" />
   </head>
 
   <body>
