--- a/student.html
+++ b/student.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Student Login</title>
     <link rel="stylesheet" href="/css/student.css" />
+    <link rel="icon" href="../assets/IIIT_logo_dark.png" />
   </head>
 
   <body>
