--- a/super.html
+++ b/super.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Super Admin Login</title>
     <link rel="stylesheet" href="/css/super.css" />
+    <link rel="icon" href="../assets/IIIT_logo_dark.png" />
   </head>
 
   <body>
